# example-services-starlette-sqlalchmey-core

./: .gitignore  README.md  logger.json  pyproject.toml
example_services/: config.py  database.py  logger.py  routes.py  run.py
example_services/apis/: example.py  service.py
example_services/migrations/: env.py
example_services/migrations/versions/: 91f109e5f580_first.py
example_services/repositories/: base.py
example_services/schemas/: example.py
example_services/tables/: examples.py
example_services/utils/: json.py
tests/: locustfile.py  test_core_services.py
